Fix - cropped images

--- a/src/assets/scss/components/ImageView.scss
+++ b/src/assets/scss/components/ImageView.scss
@@ -109,6 +109,13 @@
     img {
       max-height: 113px;
     }
+    &.can-crop {
+      min-width: initial;
+      max-width: initial;
+      img {
+        max-height: initial;
+      }
+    }
     // &.odd {
     //   background-color: rgba($color: #000000, $alpha: 0.2);
     // }
